# ij_open_data

./: .buildinfo  CONTRIBUTING.md  Makefile  README.md  changelog.html  cli-usage.html  data.html  genindex.html  index.html  license.html  notebooks.html  objects.inv  pyproject.toml  readme.html  search.html  searchindex.js  usage.html
.doctrees/: changelog.doctree  cli-usage.doctree  data.doctree  environment.pickle  index.doctree  license.doctree  notebooks.doctree  readme.doctree  usage.doctree
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml
data/: .gitignore
docs/source/: cli-usage.md  conf.py  usage.md
ij_open_data/: constants.py  scrap_open_data_cnam_ij.py
notebooks/: README.md  absences_travail_europe.py  explore_ij_decomposition.py  explore_open_data_cnam_ij.py  tx_croissances_arrets_maladies_ne.py
tests/: test_scrap_open_data_cnam_ij.py  test_utils.py
